--- a/style.css
+++ b/style.css
@@ -1,26 +1,98 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body {
+  background-color: rgb(45, 36, 52);
+}
 .div-2 {
   display: flex;
   align-items: center;
 }
 
-.span {
-  font-size: 30px;
-  margin-left: 20px;
-  background-color: gray;
-  padding: 5px 15px;
-  border-radius: 10px;
-  cursor: pointer;
+.input-checkbox {
+  margin-left: 15px;
 }
 
 .span-2 {
   font-size: 20px;
   margin-left: 20px;
-  background-color: gray;
-  padding: 5px 15px;
-  border-radius: 10px;
+  background-color: rgb(100, 73, 223);
+  padding: 10px 35px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
   cursor: pointer;
 }
 
 .span-3 {
   cursor: pointer;
+  background-color: rgb(100, 73, 223);
+  font-weight: bold;
+  color: white;
+  border-radius: 5px;
+  padding: 10px 35px;
+  margin-top: 20px;
+  font-size: 15px;
+  width: fit-content;
+}
+
+input[type='text'] {
+  outline: none;
+  border: none;
+  background-color: white;
+  padding: 5px 0;
+  padding-left: 10px;
+  border-radius: 3px;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+input[type='text']::placeholder {
+  font-size: 20px;
+}
+.button-send {
+  background-color: rgb(110, 96, 221);
+  border: none;
+  padding: 10px 35px;
+  color: white;
+  font-weight: bold;
+  border-radius: 3px;
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+h3 {
+  color: white;
+  font-size: 30px;
+  margin: 20px 0;
+}
+.todo-done {
+  text-decoration: line-through;
+  /* text-decoration-color: black; */
+  /* text-decoration-thickness: 5px; */
+}
+.div-1 {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+.rename-value {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-2 {
+  font-size: 20px;
+  outline: none;
+  margin-right: 15px;
 }
